# aws-lambda-python-streaming

./: .flake8  .gitignore  Dockerfile  README.md  lambda.Dockerfile  pyproject.toml  requirements.txt  template.yaml
.devcontainer/: devcontainer.json  postCreateCommand.sh
config/: env.py
scripts/: curl.test.sh  run.sh
src/: app.py
src/lib/: types.py
tests/: test_app.py  test_openai_chat.py
